name:                fay-dom
version:             0.1.0.0
synopsis:            DOM FFI wrapper library for Fay
description:         DOM FFI wrapper library for Fay.
homepage:            https://github.com/faylang/fay-dom
bug-reports:         https://github.com/faylang/fay-dom/issues
license:             BSD3
license-file:        LICENSE
author:              Adam Bergmark
maintainer:          Adam Bergmark
build-type:          Simple
cabal-version:       >=1.8

data-files:
  src/Language/Fay/DOM.hs

library
  hs-source-dirs: src
  exposed-modules: Language.Fay.DOM
  ghc-options: -Wall
  build-depends: fay >= 0.7
